# Skola

AUS_Cvicenia/: AUSLite.vcxproj  AUSLite.vcxproj.filters  DataStructures.sln
AUS_Statistika/: ClassDiagram.cd  SemestralnaPraca.vcxproj  SemestralnaPraca.vcxproj.filters  age.cpp  age.h  app.cpp  app.h  celectionCriterionMaxAgeGroup.cpp  compositeFilter.h  criterion.h  criterionTU.h  criterionTUAgeCount.cpp  criterionTUAgeCount.h  criterionTUAgeGroupCount.cpp  criterionTUAgeGroupCount.h  criterionTUAgeGroupRatio.cpp  criterionTUAgeGroupRatio.h  criterionTUAgeRatio.cpp  criterionTUAgeRatio.h  criterionTUEducationCount.cpp  criterionTUEducationCount.h  criterionTUEducationRatio.cpp  criterionTUEducationRatio.h  criterionTUJurisdiction.cpp  criterionTUJurisdiction.h  criterionTUSuperior.cpp  criterionTUSuperior.h  criterionTUTitle.cpp  criterionTUTitle.h  criterionTUType.cpp  criterionTUType.h  district.cpp  district.h  education.cpp  education.h  enums.h  filter.h  filterTUAgeCount.cpp  filterTUAgeCount.h  filterTUAgeGroupCount.cpp  (+21 more)
Arduino_hra/: Hra_na_8x8_display.ino
Blender_doplnok/: Heart_add-on.py
Bulanci/: Bullet.c  Bullet.h  CMakeLists.txt  Client.c  Client.h  Common.c  Common.h  Enums.c  Enums.h  GUI.c  GUI.h  Map.c  Map.h  Player.c  Player.h  README.md  Server.c  Server.h  Weapon.c  Weapon.h  main.c
Bulanci/Documentation/: Programátorská dokumentácia.docx  Užívateľská dokumentácia.docx
Dama_Java/: Dama  Dama_dokumentacia.docx
Kalkulacka_ASM/: Bobak_Dominik.asm  Bobak_Dominik.docx
MI_Blazor/: PDS-dokumentacia.docx  ProceduryFINAL.sql  SemkaFinal.txp  (+1 more)
(+242 files in other folders)
